--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "gulp"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "gulp-mocha": "^7.0.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "mocha": "^7.0.1",
+    "morgan": "~1.9.1",
+    "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
