--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jade": "~1.11.0",
     "mocha": "^7.0.1",
     "morgan": "~1.9.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
