--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "gulp"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "gulp-mocha": "^7.0.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mocha": "^7.0.1",
+    "mocha": "^7.1.1",
     "morgan": "~1.9.1",
     "supertest": "^4.0.2",
     "winston": "^3.2.1"
